--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "angular": "^1.5.5",
+    "angular-md5": "^0.1.10",
     "angular-ui-router": "^0.2.18",
     "jquery": "^2.2.3"
   }
